# nmx_clusterer

./: BoxAdministration.cpp  BoxAdministration.h  CMakeLists.txt  ClusterAssembler.cpp  ClusterAssembler.h  ClusterReader.cpp  ClusterReader.h  Clusterer.cpp  Clusterer.h  EventManager.cpp  EventManager.h  NMXClusterManager.cpp  NMXClusterManager.h  NMXClusterPairing.cpp  NMXClusterPairing.h  NMXClusterer.cpp  NMXClusterer.h  NMXClustererDefinitions.h  NMXClustererHelper.h  NMXClustererSettings.h  NMXClustererVerification.cpp  NMXClustererVerification.h  NMXLocationFinder.cpp  NMXLocationFinder.h  NMXPlaneClusterer.cpp  NMXPlaneClusterer.h  NMXQmatrix.h  NMXTimeOrderedBuffer.cpp  NMXTimeOrderedBuffer.h  PairClusters.cpp  PairClusters.h  README.md  SpecialDataReader.cpp  SpecialDataReader.h  VerifyClusters.cpp  VerifyClusters.h  WriteVerificationToDisk.cpp  WriteVerificationToDisk.h  testClusterManager.cpp  testNMXClusterer.cpp  (+3 more)
UnitTests/: nmxClustererTest.cpp
clusterer/: CMakeLists.txt
clusterer/include/: NMXClusterer.h  NMXClustererDefinitions.h  NMXClustererSettings.h  NMXPlaneClusterer.h
clusterer/src/: NMXClusterPairing.cpp  NMXClusterer.cpp  NMXPlaneClusterer.cpp
helper/src/: NMXClustererVerification.cpp
temp/: EventManager.h  NMXClusterPairing.cpp  NMXLocationFinder.cpp  NMXTimeOrderedBuffer.cpp  NMXTimeOrderedBuffer.h  testClusterManager.cpp  testNMXClusterer.cpp
